--- a/boot.css
+++ b/boot.css
@@ -1,7 +1,7 @@
 .bg {
-    background-image: url("space_astronaut_nasa_outer_space_job-116451.jpg");
+    background-image: url("22.jpg");
     background-size: cover;
-    height: 600px;
+    height: 700px;
     padding-top: 1%;
     
  
